fix overflow due to margin

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,3 @@
 .padding {
-  margin: 1rem;
+  padding: 1rem;
 }
